# vitol_test

./: TakeHomeTest_NLP.ipynb  main.py  pyproject.toml  requirements.txt
src_code/data_manager/: dm_article.py  dm_article_repository.py  dm_load_data.py  dm_preprocess_data.py  dm_query.py  dm_user_profile.py
src_code/unit_tests/data_manager/dm_article_repository/: test_dm_article_repository.py
src_code/unit_tests/data_manager/dm_load_data/: test_dm_load_data.py
working_folder/: the_plan.txt
