[project]
name = "vitol-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "asttokens>=3.0.0",
    "click>=8.2.1",
    "comm>=0.2.3",
    "debugpy>=1.8.16",
    "decorator>=5.2.1",
    "executing>=2.2.1",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "ipython-pygments-lexers>=1.1.1",
    "jedi>=0.19.2",
    "joblib>=1.5.2",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "matplotlib-inline>=0.1.7",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "parso>=0.8.5",
    "pexpect>=4.9.0",
    "platformdirs>=4.4.0",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.0.0",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "pygments>=2.19.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyzmq>=27.0.2",
    "regex>=2025.9.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "six>=1.17.0",
    "stack-data>=0.6.3",
    "threadpoolctl>=3.6.0",
    "tornado>=6.5.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.1",
    "tzdata>=2025.2",
    "wcwidth>=0.2.13",
]
